syntax = "proto3";

package customer_demographic;

option go_package = "northwind/proto/customer_demographic";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";


service CustomerDemographic {
    
    rpc CustomerDemographicByCustomerTypeID(CustomerDemographicByCustomerTypeIDRequest) returns (typespb.CustomerDemographic) {
        option (google.api.http) = {
            get: "/v1/customer-demographic/{customerTypeID}"
            
        };
    }
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/customer-demographic/{customerTypeID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/customer-demographic"
            body: "*"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/customer-demographic/{customerTypeID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/customer-demographic/upsert"
            body: "*"
            
        };
    }
    
}

message CustomerDemographicByCustomerTypeIDRequest { 
    string customerTypeID = 1;
}

message DeleteRequest { 
    string customerTypeID = 1;
}

message InsertRequest { 
    google.protobuf.StringValue customerDesc = 1;
    string customerTypeID = 2;
}

message UpdateRequest { 
    google.protobuf.StringValue customerDesc = 1;
    // Output only.
    string customerTypeID = 2;
}

message UpsertRequest { 
    google.protobuf.StringValue customerDesc = 1;
    string customerTypeID = 2;
}
